# jupyterlab_server

./: .git-blame-ignore-revs  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  setupbase.py
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  downstream.yml  fix-license-header.yml  main.yml  tests.yml
docs/: autogen_config.py  environment.yml
docs/source/: conf.py  index.rst
docs/source/api/: app.rst  config.rst  handlers.rst  index.rst  process.rst  rest.rst  spec.rst
jupyterlab_launcher/: __init__.py  _version.py  app.py  handlers.py  index.html  json_minify.py  process.py  process_app.py  server.py  servertest.py  sessions_handler.py  settings_handler.py  theme_handler.py  themes_handler.py  workspaces_handler.py
jupyterlab_launcher/test/: utils.py
jupyterlab_launcher/tests/: test_settings_api.py  test_workspaces_api.py  utils.py
jupyterlab_launcher/tests/workspaces/: a-b-f-o-o-91b9.jupyterlab-workspace  bar.jupyterlab-workspace  foo.jupyterlab-workspace
jupyterlab_server/: 403.html  __init__.py  __main__.py  _version.py  app.py  config.py  handlers.py  index.html  json_minify.py  json_utils.py  licenses_app.py  licenses_handler.py  listings_handler.py  process.py  process_app.py  pytest_plugin.py  rest-api.yml  server.py  servertest.py  settings_handler.py  settings_utils.py  spec.py  test_utils.py  themes_handler.py  translation_utils.py  translations_handler.py  utils.py  workspaces_app.py  workspaces_handler.py
jupyterlab_server/templates/: index.html
jupyterlab_server/tests/: conftest.py  test_labapp.py  test_licenses_api.py  test_settings_api.py  test_translation_api.py  test_workspaces_api.py  utils.py  utilsbase.py
jupyterlab_server/tests/app-settings/: overrides.json
jupyterlab_server/tests/schemas/@jupyterlab/apputils-extension/: themes.json
jupyterlab_server/tests/schemas/@jupyterlab/shortcuts-extension/: plugin.json
jupyterlab_server/tests/translations/jupyterlab-language-pack-es_CO/: MANIFEST.in
jupyterlab_server/tests/translations/jupyterlab-language-pack-es_CO/jupyterlab_language_pack_es_CO/locale/es_CO/LC_MESSAGES/: jupyterlab.mo
jupyterlab_server/tests/translations/jupyterlab-some-package/jupyterlab_some_package/locale/es_CO/LC_MESSAGES/: jupyterlab_some_package.json
tests/: conftest.py  test_config.py  test_labapp.py  test_licenses_api.py  test_listings_api.py  test_process.py  test_settings_api.py  test_themes_api.py  test_translation_api.py  test_translation_utils.py  test_workspaces_api.py  test_workspaces_app.py  utils.py
tests/app-settings/: overrides.json
tests/translations/jupyterlab-language-pack-es_CO/: setup.py
tests/translations/jupyterlab-language-pack-es_CO/jupyterlab_language_pack_es_CO/locale/es_CO/LC_MESSAGES/: jupyterlab.json  jupyterlab.po  jupyterlab_some_package.json  jupyterlab_some_package.mo  jupyterlab_some_package.po
tests/translations/jupyterlab-some-package/: MANIFEST.in  setup.py
tests/translations/jupyterlab-some-package/jupyterlab_some_package/locale/es_CO/LC_MESSAGES/: jupyterlab_some_package.json
