[metadata]
name = jupyterlab_server
version = attr: jupyterlab_server._version.__version__
description = A set of server components for JupyterLab and JupyterLab like applications .
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = jupyter, jupyterlab
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    babel
    entrypoints>=0.2.2
    jinja2>=2.10
    json5
    jsonschema>=3.0.1
    packaging
    requests
    jupyter_server~=1.4


[options.extras_require]
test = codecov; ipykernel; pytest>=5.3.2; pytest-cov; jupyter_server[test]; openapi_core~=0.14.0; pytest-console-scripts; strict-rfc3339; ruamel.yaml; wheel

[options.packages.find]
exclude =
    docs*
    tests*
