[metadata]
name = jupyterlab_server
version = attr: jupyterlab_server._version.__version__
description = A set of server components for JupyterLab and JupyterLab like applications .
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
project_urls =
    Documentation = https://jupyterlab-server.readthedocs.io
    Funding = https://numfocus.org/donate-to-jupyter
    Source = https://github.com/jupyterlab/jupyterlab_server
    Tracker = https://github.com/jupyterlab/jupyterlab_server/issues
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyterlab-server.readthedocs.io
platforms = Linux, Mac OS X, Windows
keywords = jupyter, jupyterlab
classifiers =
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    babel
    importlib_metadata>=3.6;python_version<"3.10"
    jinja2>=3.0.3
    json5
    jsonschema>=3.0.1
    jupyter_server>=1.8,<2
    packaging
    requests

[options.extras_require]
openapi =
    openapi_core>=0.14.2
    ruamel.yaml
test =
    %(openapi)s
    codecov
    ipykernel
    jupyter_server[test]
    openapi-spec-validator<0.5
    pytest-console-scripts
    pytest-cov
    pytest>=5.3.2
    strict-rfc3339
    wheel

[options.packages.find]
exclude =
    docs*
    tests*

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
